start receiving test data from local dynamo db

--- a/server/aws-chat-server/pom.xml
+++ b/server/aws-chat-server/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>quarkus-amazon-dynamodb</artifactId>
         </dependency>
         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>url-connection-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy-jackson</artifactId>
         </dependency>
