--- a/server/aws-chat-server/src/main/resources/application.properties
+++ b/server/aws-chat-server/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 # key = value
 quarkus.http.cors=true
 quarkus.dynamodb.endpoint-override=http://localhost:8000
+quarkus.container-image.group=${docker_user}
+quarkus.container-image.registry=docker.io
+quarkus.container-image.username=${docker_user}
+quarkus.container-image.password=${docker_password}
