--- a/server/aws-chat-server/pom.xml
+++ b/server/aws-chat-server/pom.xml
@@ -61,6 +61,10 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-container-image-docker</artifactId>
+        </dependency>
 
 <!--        <dependency>-->
 <!--            <groupId>com.amazonaws</groupId>-->
