--- a/.github/workflows/dockerBuildNative.yaml
+++ b/.github/workflows/dockerBuildNative.yaml
@@ -17,4 +17,4 @@ jobs:
         env:
           dockerUser: ${{ secrets.DOCKER_USERNAME }}
           dockerPassword: ${{ secrets.DOCKER_PASSWORD }}
-        run: mvn -B package --file server/aws-chat-server/pom.xml -Pnative -Dquarkus.native.container-build=true -Dquarkus.container-image.build=true -Dquarkus.container-image.push=true -Dquarkus.container-image.name=aws-chat-server-native -Ddocker.user=$dockerUser -Ddocker.password=$dockerPassword
+        run: mvn -B package --file server/aws-chat-server/pom.xml -Pnative -Dquarkus.native.container-build=true -Dquarkus.container-image.build=true -Dquarkus.container-image.push=true -Dquarkus.container-image.name=aws-chat-server-native -Ddocker_user=$dockerUser -Ddocker_password=$dockerPassword
