--- a/server/aws-chat-server/pom.xml
+++ b/server/aws-chat-server/pom.xml
@@ -65,12 +65,6 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-container-image-docker</artifactId>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>com.amazonaws</groupId>-->
-<!--            <artifactId>aws-java-sdk-dynamodb</artifactId>-->
-<!--            <version>1.11.420</version>-->
-<!--        </dependency>-->
     </dependencies>
     <build>
         <plugins>
@@ -141,6 +135,21 @@
             <properties>
                 <quarkus.package.type>native</quarkus.package.type>
             </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-amazon-lambda-http</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>lambda</id>
+            <dependencies>
+                <dependency>
+                    <groupId>io.quarkus</groupId>
+                    <artifactId>quarkus-amazon-lambda-http</artifactId>
+                </dependency>
+            </dependencies>
         </profile>
     </profiles>
 </project>
