--- a/server/aws-chat-server/pom.xml
+++ b/server/aws-chat-server/pom.xml
@@ -122,8 +122,12 @@
                                         <native.image.path>
                                             ${project.build.directory}/${project.build.finalName}-runner
                                         </native.image.path>
-                                        <java.util.logging.manager>org.jboss.logmanager.LogManager
+                                        <java.util.logging.manager>
+                                            org.jboss.logmanager.LogManager
                                         </java.util.logging.manager>
+                                        <native-image.xmx>
+                                            10g
+                                        </native-image.xmx>
                                         <maven.home>${maven.home}</maven.home>
                                     </systemPropertyVariables>
                                 </configuration>
